before simplifying